Hide hero on mobile fix

--- a/static/sass/layout/_header.scss
+++ b/static/sass/layout/_header.scss
@@ -1,4 +1,3 @@
-
 header {
   min-height: 132px;
   background-color: $primary-color;
@@ -44,7 +43,7 @@ header {
         display: inline-block;
         font-size: 20px;
         margin-left: 26px;
-        font-weight: 100;
+        font-weight: 300;
         letter-spacing: 1px;
 
         a {
@@ -63,6 +62,21 @@ header {
       @include align-items(center);
        > div {
         margin: 30px 0 10px;
+
+        svg {
+          @include size(60px);
+        }
+
+        div {
+          margin: 4px 0 0 20px;
+          h1 {
+            font-size: 1.6em;
+          }
+
+          h3 {
+            font-size: 1.2em;
+          }
+        }
       }
     }
 
