--- a/static/sass/pages/_home.scss
+++ b/static/sass/pages/_home.scss
@@ -1,53 +1,24 @@
 main {
   #hero {
+    display: none;
     width: 100%;
     background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(/static/images/hero.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
-
-    display: table;
+    background-position: center; 
 
     @media screen and (min-width: 818px) {
       display: block;
     }
 
     div {
-      display: table-cell;
-      vertical-align: middle;
-
       h1 {
-        text-align: center;
+        padding: 3% 15px 0 0;
         font-family: 'Roboto Mono', sans-serif;
-        line-height: 1;
-        color: rgb(255, 255, 255);
-
-        &:first-child{
-          display: none;
-
-          @media screen and (min-width: 818px) {
-            display: block;
-            padding-top: 3%;
-          }
-        }
-
-        &:nth-child(2) {
-          line-height: 1.3;
-
-          @media screen and (min-width: 818px) {
-            padding-top: inherit;
-          }
-        }
-
-        @media screen and (min-width: 818px) {
-          text-align: right;
-          padding-right: 15px;
-          letter-spacing: 5px;
-        }
-      }
-
-      @media screen and (min-width: 818px) {
-        display: block;
+        color: #fff;
+        text-align: right;
+        line-height: 0.75;
+        letter-spacing: 5px;
       }
     }
 
